--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
     "@types/node": "^18.11.18",
-    "node-telegram-bot-api": "^0.61.0"
+    "ini": "^3.0.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "qrcode": "^1.5.1",
+    "randomstring": "^1.2.3"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
