--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "dependencies": {
-    "@adiwajshing/baileys": "^4.4.0",
-    "@types/node": "^18.11.18",
-    "ini": "^3.0.1",
-    "node-telegram-bot-api": "^0.61.0",
-    "qrcode": "^1.5.1",
-    "randomstring": "^1.2.3"
-  },
-  "devDependencies": {
-    "eslint": "^8.33.0",
-    "prettier": "^2.8.3",
-    "typescript": "^4.9.5"
-  }
+    "dependencies": {
+        "@adiwajshing/baileys": "^4.4.0",
+        "@types/node": "^18.11.18",
+        "ini": "^3.0.1",
+        "node-telegram-bot-api": "^0.61.0",
+        "qrcode": "^1.5.1",
+        "randomstring": "^1.2.3"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "@typescript-eslint/parser": "^5.51.0",
+        "eslint": "^8.33.0",
+        "prettier": "^2.8.3",
+        "typescript": "^4.9.5"
+    }
 }
