--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
     "dependencies": {
         "@adiwajshing/baileys": "^4.4.0",
+        "@types/express": "^4.17.17",
         "@types/node": "^18.11.18",
+        "antd": "^5.2.2",
+        "express": "^4.18.2",
         "ini": "^3.0.1",
         "node-telegram-bot-api": "^0.61.0",
         "qrcode": "^1.5.1",
-        "randomstring": "^1.2.3"
+        "randomstring": "^1.2.3",
+        "react": "^18.2.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.51.0",
