--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     },
 
     "include": ["./src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+    "types": ["node"]
 }
