--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
         "@adiwajshing/baileys": "^4.4.0",
         "@types/express": "^4.17.17",
         "@types/node": "^18.11.18",
+        "@types/body-parser": "^1.19.2",
+        "@types/chai-http": "^4.2.0",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
         "antd": "^5.2.2",
         "express": "^4.18.2",
         "ini": "^3.0.1",
         "node-telegram-bot-api": "^0.61.0",
+        "nodemon": "^2.0.20",
         "qrcode": "^1.5.1",
         "randomstring": "^1.2.3",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.51.0",
