--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,8 @@
         "target": "es2018",
         "module": "CommonJS",
 
-        "types": [
-            "node",
-            "express"
-        ],
-        
+        "types": ["node", "express"],
+
         "outDir": "./Chat2Chat",
         "lib": ["es2020", "esnext.array", "DOM"],
 
@@ -26,7 +23,5 @@
         "forceConsistentCasingInFileNames": true
     },
 
-    "include": [
-        "./src/**/*.ts",
-    ],
+    "include": ["./src/**/*.ts"]
 }
