--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "dependencies": {
         "@adiwajshing/baileys": "^4.4.0",
-        "@types/express": "^4.17.17",
-        "@types/node": "^18.11.18",
         "@types/body-parser": "^1.19.2",
         "@types/chai-http": "^4.2.0",
+        "@types/express": "^4.17.17",
+        "@types/node": "^18.11.18",
+        "@types/node-telegram-bot-api": "^0.61.3",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "antd": "^5.2.2",
